2009-09-19  Noel O'Boyle  <baoilleach@gmail.com>

	Miscellaneous static_casts added and unused variables removed to get rid
	of warnings under MSVC

2009-09-18  Noel O'Boyle  <baoilleach@gmail.com>

	* include/openbabel/generic.h: Remove unused declarations that caused
	warnings under MSVC
	* test/obtest.h: Make compatible with MSVC
	* test/CMakeLists.txt: Build tests in the same location as the OB DLL
	(Windows only)
	* src/formats/CMakeLists.txt: Build obf files in same location as the
	OB DLL (Windows only)
	* CMakeLists.txt, CTestConfig.cmake: Option to submit tests to dashboard
	* windows-vc2008, *.bat: Tidy up batch files for building OB

2009-09-17  Noel O'Boyle  <baoilleach@gmail.com>

	* CMakeLists.txt, data/CMakeLists.txt: Tidy up the Windows build. The
	goal is to have CMake make something as close as possible to a
	distribution.

2009-09-17  Noel O'Boyle  <baoilleach@gmail.com>

	* include/stereo/stereo.h: Remove obsolete stereo functions and
	associated documentation
	* scripts/CMakeLists.txt: Add option PYTHON_PREFIX to allow the user
	to specify where the Python library will be installed. Note that it
	creates an _openbabel.dll on Windows in error (it should be
	_openbabel.pyd).

2009-09-17  Noel O'Boyle  <baoilleach@gmail.com>

	* src/parsmart.cpp: Handle ring-closure bonds involved in
	stereochemistry.

2009-09-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/stereo/perception.cpp: Implement para-stereocenter detection.
	 (see J. Chem. Inf. Comput. Sci., Vol. 33, No. 6, 1993 or code for details)

2009-09-16  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/CMakeLists.txt: Add icon. Add comctl32.lib for Windows
	build.
	* windows-vc2008, windows-vc2006/cmake.bat: Create new folder for
	MSVC++ Express 2008. Add batch file to run cmake.

2009-09-16  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/optswx.cpp: Minor mods to compile on Linux.

2009-09-13  Chris Morley

	* src/GUI/OBGUI.h,OBGUI.cpp: